Input box 들 중 selection list 형태의 인풋박스들에 대한 서버 설정  //  서버통신에 대한 http header 옵션 설정  //  model 이름 변경(commom-model -> input-fields-model)  //  input property 들 중 일부 네이밍 변경 (bizOrNot -> useType, useType -> usePurs, usePurpose -> useDetail)   //  모델명 및 프로퍼티 변경에 따른 코드변경 실행   //  아직 화면에 실제로 표시되진 않음, 구현 필요  //  그 외 다른 기능 전부 구현 필요

--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -1,7 +1,7 @@
 <div role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
   <h1>Fill in</h1>
 
-  <form #inputForm>
+  <div #inputForm [formGroup]="historyInputForm">
 
     <div class="form-row">
       <label for="datepicker" class="col-form-label">사용 일자</label>
@@ -9,8 +9,7 @@
         <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 0px;"
           [ngStyle]="{'font-size.px': 15}">
           <mat-label>시작일</mat-label>
-          <input matInput [matDatepicker]="picker1" placeholder="YYYY-MM-DD" [(ngModel)]="record.dateFrom"
-            name="dateFrom">
+          <input matInput [matDatepicker]="picker1" placeholder="YYYY-MM-DD" formControlName="dateFrom">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
           <mat-datepicker #picker1></mat-datepicker>
         </mat-form-field>
@@ -18,7 +17,7 @@
         <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 30px;"
           [ngStyle]="{'font-size.px': 15}">
           <mat-label>종료일</mat-label>
-          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD" [(ngModel)]="record.dateTo" name="dateTo">
+          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD" name="dateTo" formControlName="dateTo">
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
           <mat-datepicker #picker2></mat-datepicker>
         </mat-form-field>
@@ -28,35 +27,105 @@
     <div class="form-row">
       <div class="form-group col-md-4">
         <label for="selectCarNum" class="col-form-label">차량선택</label>
-        <select id="selectCarNum" class="form-control" [(ngModel)]="record.histCar" name="histCar">
-          <option *ngFor="let car of carList" [value]="car.key">
+        <select id="selectCarNum" class="form-control" formControlName="histCar">
+          <option *ngFor="let car of histCarList" [value]="car.key">
             {{car.value}}
           </option>
         </select>
       </div>
       <div class="form-group col-md-4">
         <label for="inputDpt" class="col-form-label">소속명</label>
-        <input type="text" class="form-control" placeholder="소속명" [(ngModel)]="record.driverDep" name="driverDep">
+        <input type="text" class="form-control" placeholder="소속명" formControlName="driverDep">
       </div>
       <div class="form-group col-md-4">
         <label for="inputName" class="col-form-label">성명</label>
-        <input type="text" class="form-control" placeholder="성명" [(ngModel)]="record.driverNm" name="driverNm">
+        <input type="text" class="form-control" placeholder="성명" formControlName="driverNm">
       </div>
     </div>
+
 
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="selectUseType" class="col-form-label">사용형태</label>
-        <select id="selectUseType" class="form-control" [(ngModel)]="record.bizOrNot" name="bizOrNot">
+        <select id="selectUseType" class="form-control" formControlName="useType">
           <option [value]="item.key" *ngFor="let item of histCarList | keyvalue ">{{item.value}}</option>
         </select>
       </div>
       <div class="form-group col-md-6">
         <label for="selectPurpose" class="col-form-label">사용유형</label>
-        <select id="selectPurpose" class="form-control" [(ngModel)]="record.useType" name="useType">
+        <select id="selectPurpose" class="form-control" formControlName="usePurs">
           <option [value]="item.key" *ngFor="let item of useTypeList | keyvalue ">{{item.value}}</option>
+        </select>
+      </div>
+    </div>
 
-          <!-- <option selected>제조, 판매시설 등 해당 법인의 사업장 방문</option>
+    <div class="form-group width: 100%">
+      <label for="useDetail">사용목적 기입</label>
+      <textarea class="form-control" id="useDetail" rows="3" formControlName="useDetail"></textarea>
+    </div>
+
+    <div class="form-row">
+      <div class="form-group col-md-3">
+        <label for="inputDestination" class="col-form-label">목적지</label>
+        <input id="destination" type="text" class="form-control" placeholder="목적지" formControlName="destination">
+      </div>
+      <div class="form-group col-md-3">
+        <label for="inputStopover" class="col-form-label">경유지</label>
+        <input type="text" class="form-control" placeholder="경유지" formControlName="dropBy">
+      </div>
+      <div class="form-group col-md-3">
+        <label for="inputKM" class="col-form-label">주행거리</label>
+        <span style="display: flex;"><input type="text" class="form-control" placeholder="주행거리"
+            formControlName="mileage"><span style="margin-top: 5px;">KM</span></span>
+      </div>
+      <div class="form-group col-md-3">
+        <label for="inputRefuel" class="col-form-label">주유내역</label>
+        <span style="display: flex;"><input type="text" class="form-control" placeholder="주유량"
+            formControlName="fueling"><span style="margin-top: 5px;">L</span></span>
+      </div>
+    </div>
+
+  </div>
+
+  <!--
+
+    
+      
+  </div>
+-->
+
+  <!-- <div class="form-row">
+    <div class="form-group col-md-4">
+      <label for="selectCarNum" class="col-form-label">차량선택</label>
+      <select id="selectCarNum" class="form-control" [(ngModel)]="record.histCar" name="histCar">
+        <option *ngFor="let car of histCarList" [value]="car.key">
+          {{car.value}}
+        </option>
+      </select>
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputDpt" class="col-form-label">소속명</label>
+      <input type="text" class="form-control" placeholder="소속명" [(ngModel)]="record.driverDep" name="driverDep">
+    </div> -->
+  <!-- <div class="form-group col-md-4">
+      <label for="inputName" class="col-form-label">성명</label>
+      <input type="text" class="form-control" placeholder="성명" [(ngModel)]="record.driverNm" name="driverNm">
+    </div>
+  </div> -->
+
+  <!-- <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="selectUseType" class="col-form-label">사용형태</label>
+      <select id="selectUseType" class="form-control" [(ngModel)]="record.bizOrNot" name="bizOrNot">
+        <option [value]="item.key" *ngFor="let item of histCarList | keyvalue ">{{item.value}}</option>
+      </select>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="selectPurpose" class="col-form-label">사용유형</label>
+      <select id="selectPurpose" class="form-control" [(ngModel)]="record.useType" name="useType">
+        <option [value]="item.key" *ngFor="let item of useTypeList | keyvalue ">{{item.value}}</option> -->
+
+  <!-- <option selected>제조, 판매시설 등 해당 법인의 사업장 방문</option>
           <option>거래처, 대리점 방문</option>
           <option>회의 참석</option>
           <option>판촉 활동</option>
@@ -64,44 +133,41 @@
           <option>교육, 훈련 등 기타 위에서 정하지 않은 업무 사용 목적</option>
           <option>비업무용</option> -->
 
-        </select>
-      </div>
+  <!-- </select>
     </div>
+  </div> -->
 
-    <div class="form-group width: 100%">
-      <label for="inputPurposeText">사용목적 기입</label>
-      <textarea class="form-control" id="inputPurposeText" rows="3" [(ngModel)]="record.usePurpose"
-        name="usePurpose"></textarea>
+  <!-- <div class="form-group width: 100%">
+    <label for="inputPurposeText">사용목적 기입</label>
+    <textarea class="form-control" id="inputPurposeText" rows="3" [(ngModel)]="record.usePurpose"
+      name="usePurpose"></textarea>
+  </div> -->
+  <!-- <div class="form-row">
+    <div class="form-group col-md-3">
+      <label for="inputDestination" class="col-form-label">목적지</label>
+      <input id="destination" type="text" class="form-control" placeholder="목적지" [(ngModel)]="record.destination"
+        name="destination">
     </div>
-    <div class="form-row">
-      <div class="form-group col-md-3">
-        <label for="inputDestination" class="col-form-label">목적지</label>
-        <input id="destination" type="text" class="form-control" placeholder="목적지" [(ngModel)]="record.destination"
-          name="destination">
-      </div>
-      <div class="form-group col-md-3">
-        <label for="inputStopover" class="col-form-label">경유지</label>
-        <input type="text" class="form-control" placeholder="경유지" [(ngModel)]="record.dropBy" name="dropBy">
-      </div>
-      <div class="form-group col-md-3">
-        <label for="inputKM" class="col-form-label">주행거리</label>
-        <span style="display: flex;"><input type="text" class="form-control" placeholder="주행거리"
-            [(ngModel)]="record.mileage" name="maileage"><span style="margin-top: 5px;">KM</span></span>
-      </div>
-      <div class="form-group col-md-3">
-        <label for="inputRefuel" class="col-form-label">주유내역</label>
-        <span style="display: flex;"><input type="text" class="form-control" placeholder="주유량"
-            [(ngModel)]="record.fueling" name="fueling"><span style="margin-top: 5px;">L</span></span>
-      </div>
+    <div class="form-group col-md-3">
+      <label for="inputStopover" class="col-form-label">경유지</label>
+      <input type="text" class="form-control" placeholder="경유지" [(ngModel)]="record.dropBy" name="dropBy">
     </div>
-  </form>
+    <div class="form-group col-md-3">
+      <label for="inputKM" class="col-form-label">주행거리</label>
+      <span style="display: flex;"><input type="text" class="form-control" placeholder="주행거리"
+          [(ngModel)]="record.mileage" name="maileage"><span style="margin-top: 5px;">KM</span></span>
+    </div>
+    <div class="form-group col-md-3">
+      <label for="inputRefuel" class="col-form-label">주유내역</label>
+      <span style="display: flex;"><input type="text" class="form-control" placeholder="주유량"
+          [(ngModel)]="record.fueling" name="fueling"><span style="margin-top: 5px;">L</span></span>
+    </div>
+  </div>
+</div> -->
 
   <div class="row justify-content-center" style="margin-top: 20px;">
-    <button (click)="add(inputForm.value); inputFrom.value=''" id="addInputData" class="btn btn-md btn-primary"
-      type="submit" style="margin: 5px;">입력
-      완료</button>
+    <button (click)="add()" id="addInputData" class="btn btn-md btn-primary" type="submit"
+      style="margin: 5px;">입력완료</button>
     <button (click)="close()" id="closePage" class="btn btn-md btn-primary" type="submit"
       style="margin: 5px;">닫기</button>
   </div>
-
-</div>
