--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -4,7 +4,7 @@
       <h1>Search</h1>
     </div>
     <div class="p-2 bd-highlight" style="padding-right: 0px;">
-      <button id="searchBtn" class="btn btn-md btn-primary" type="submit">SEARCH</button>
+      <button (click)="search()" id="searchBtn" class="btn btn-md btn-primary" type="submit">SEARCH</button>
     </div>
   </div>
 
@@ -77,19 +77,19 @@
         <td mat-cell *matCellDef="let element"> {{element.driverNm}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="bizOrNot">
-        <th mat-header-cell *matHeaderCellDef> 사용형태 </th>
-        <td mat-cell *matCellDef="let element"> {{element.bizOrNot}} </td>
-      </ng-container>
-
       <ng-container matColumnDef="useType">
-        <th mat-header-cell *matHeaderCellDef> 사용유형 </th>
+        <th mat-header-cell *matHeaderCellDef> 사용형태 </th>
         <td mat-cell *matCellDef="let element"> {{element.useType}} </td>
       </ng-container>
 
-      <ng-container matColumnDef="usePurpose">
+      <ng-container matColumnDef="usePurs">
+        <th mat-header-cell *matHeaderCellDef> 사용유형 </th>
+        <td mat-cell *matCellDef="let element"> {{element.usePurs}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="useDetail">
         <th mat-header-cell *matHeaderCellDef> 사용목적 </th>
-        <td mat-cell *matCellDef="let element"> {{element.usePurpose}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.useDetail}} </td>
       </ng-container>
 
       <ng-container matColumnDef="mileage">
