--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -48,7 +48,7 @@
       <div class="form-group col-md-6">
         <label for="selectUseType" class="col-form-label">사용형태</label>
         <select id="selectUseType" class="form-control" formControlName="useType">
-          <option [value]="item.key" *ngFor="let item of histCarList | keyvalue ">{{item.value}}</option>
+          <option [value]="item.code" *ngFor="let item of selectionList">{{item.name}}</option>
         </select>
       </div>
       <div class="form-group col-md-6">
