'Front 쪽 Table 항목명(html, ts 모두)' 과 'back-end 쪽 DB 항목명(컬럼명)' 일치하게 수정  //  table List 가져올 수 있도록 서버와 통신하는 것 까진 구현완료  //  가져온 data 를 list로 그릴 수 있도록 구현할 예정

--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -33,7 +33,7 @@
       </div>
       <div class="form-group col-md-4">
         <label for="inputDpt" class="col-form-label">소속명</label>
-        <input type="text" class="form-control" placeholder="소속명" formControlName="driverDep">
+        <input type="text" class="form-control" placeholder="소속명" formControlName="driverDept">
       </div>
       <div class="form-group col-md-4">
         <label for="inputName" class="col-form-label">성명</label>
@@ -59,22 +59,22 @@
 
     <div class="form-group width: 100%">
       <label for="useDetail">사용목적 기입</label>
-      <textarea class="form-control" id="useDetail" rows="3" formControlName="useDetail"></textarea>
+      <textarea class="form-control" id="useDetail" rows="3" formControlName="usePursDetail"></textarea>
     </div>
 
     <div class="form-row">
       <div class="form-group col-md-3">
         <label for="inputDestination" class="col-form-label">목적지</label>
-        <input id="destination" type="text" class="form-control" placeholder="목적지" formControlName="destination">
+        <input id="destination" type="text" class="form-control" placeholder="목적지" formControlName="dest">
       </div>
       <div class="form-group col-md-3">
         <label for="inputStopover" class="col-form-label">경유지</label>
-        <input type="text" class="form-control" placeholder="경유지" formControlName="dropBy">
+        <input type="text" class="form-control" placeholder="경유지" formControlName="dropby">
       </div>
       <div class="form-group col-md-3">
         <label for="inputKM" class="col-form-label">주행거리</label>
         <span style="display: flex;"><input type="text" class="form-control" placeholder="주행거리"
-            formControlName="mileage"><span style="margin-top: 5px;">KM</span></span>
+            formControlName="driveDist"><span style="margin-top: 5px;">KM</span></span>
       </div>
       <div class="form-group col-md-3">
         <label for="inputRefuel" class="col-form-label">주유내역</label>
