--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -68,9 +68,9 @@
           <td mat-cell *matCellDef="let element"> {{element.dateTo}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="driverDep">
+        <ng-container matColumnDef="driverDept">
           <th mat-header-cell *matHeaderCellDef> 소속 </th>
-          <td mat-cell *matCellDef="let element"> {{element.driverDep}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.driverDept}} </td>
         </ng-container>
 
         <ng-container matColumnDef="driverNm">
@@ -88,14 +88,14 @@
           <td mat-cell *matCellDef="let element"> {{element.usePurs}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="useDetail">
+        <ng-container matColumnDef="usePursDetail">
           <th mat-header-cell *matHeaderCellDef> 사용목적 </th>
-          <td mat-cell *matCellDef="let element"> {{element.useDetail}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.usePursDetail}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="mileage">
+        <ng-container matColumnDef="driveDist">
           <th mat-header-cell *matHeaderCellDef> 주행거리(KM) </th>
-          <td mat-cell *matCellDef="let element"> {{element.mileage}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.driveDist}} </td>
         </ng-container>
 
         <ng-container matColumnDef="accumMileage">
@@ -103,14 +103,14 @@
           <td mat-cell *matCellDef="let element"> {{element.accumMileage}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="destination">
+        <ng-container matColumnDef="dest">
           <th mat-header-cell *matHeaderCellDef> 목적지 </th>
-          <td mat-cell *matCellDef="let element"> {{element.destination}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.dest}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="dropBy">
+        <ng-container matColumnDef="dropby">
           <th mat-header-cell *matHeaderCellDef> 경유지 </th>
-          <td mat-cell *matCellDef="let element"> {{element.dropBy}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.dropby}} </td>
         </ng-container>
 
         <ng-container matColumnDef="fueling">
