--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -58,6 +58,11 @@
           </td>
         </ng-container>
 
+        <ng-container matColumnDef="seq">
+          <th mat-header-cell *matHeaderCellDef> # </th>
+          <td mat-cell *matCellDef="let element"> {{element.seq}} </td>
+        </ng-container>
+
         <ng-container matColumnDef="dateFrom">
           <th mat-header-cell *matHeaderCellDef> 사용일자(시작일) </th>
           <td mat-cell *matCellDef="let element"> {{element.dateFrom}} </td>
@@ -116,6 +121,11 @@
         <ng-container matColumnDef="fueling">
           <th mat-header-cell *matHeaderCellDef> 주유내역(L) </th>
           <td mat-cell *matCellDef="let element"> {{element.fueling}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="carid">
+          <th mat-header-cell *matHeaderCellDef> 차량 </th>
+          <td mat-cell *matCellDef="let element"> {{element.carid}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
