car-use-hist 서버로 부터 사용내역 data 받아와서 화면에 list grid 그리는 것 구현 완료  //  관련하여 불필요 로직 정리 및 주석처리 추가  //  향후 post 로 서버에 내용 밀어넣는 기능 및 검색조건 설정하여 검색하는 기능 추가 예정

--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -63,49 +63,49 @@
           <td mat-cell *matCellDef="let element"> {{element.seq}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="dateFrom">
+        <ng-container matColumnDef="datefrom">
           <th mat-header-cell *matHeaderCellDef> 사용일자(시작일) </th>
-          <td mat-cell *matCellDef="let element"> {{element.dateFrom}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.datefrom}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="dateTo">
+        <ng-container matColumnDef="dateto">
           <th mat-header-cell *matHeaderCellDef> 사용일자(종료일) </th>
-          <td mat-cell *matCellDef="let element"> {{element.dateTo}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.dateto}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="driverDept">
+        <ng-container matColumnDef="driverdept">
           <th mat-header-cell *matHeaderCellDef> 소속 </th>
-          <td mat-cell *matCellDef="let element"> {{element.driverDept}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.driverdept}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="driverNm">
+        <ng-container matColumnDef="drivernm">
           <th mat-header-cell *matHeaderCellDef> 운전자 </th>
-          <td mat-cell *matCellDef="let element"> {{element.driverNm}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.drivernm}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="useType">
+        <ng-container matColumnDef="usetype">
           <th mat-header-cell *matHeaderCellDef> 사용형태 </th>
-          <td mat-cell *matCellDef="let element"> {{element.useType}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.usetype}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="usePurs">
+        <ng-container matColumnDef="usepurs">
           <th mat-header-cell *matHeaderCellDef> 사용유형 </th>
-          <td mat-cell *matCellDef="let element"> {{element.usePurs}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.usepurs}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="usePursDetail">
+        <ng-container matColumnDef="usepursdetail">
           <th mat-header-cell *matHeaderCellDef> 사용목적 </th>
-          <td mat-cell *matCellDef="let element"> {{element.usePursDetail}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.usepursdetail}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="driveDist">
+        <ng-container matColumnDef="drivedist">
           <th mat-header-cell *matHeaderCellDef> 주행거리(KM) </th>
-          <td mat-cell *matCellDef="let element"> {{element.driveDist}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.drivedist}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="accumMileage">
+        <ng-container matColumnDef="accummileage">
           <th mat-header-cell *matHeaderCellDef> 누적주행거리(KM) </th>
-          <td mat-cell *matCellDef="let element"> {{element.accumMileage}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.accummileage}} </td>
         </ng-container>
 
         <ng-container matColumnDef="dest">
