--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -9,7 +9,7 @@
         <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 0px;"
           [ngStyle]="{'font-size.px': 15}">
           <mat-label>시작일</mat-label>
-          <input matInput [matDatepicker]="picker1" placeholder="YYYY-MM-DD" formControlName="dateFrom">
+          <input matInput [matDatepicker]="picker1" placeholder="YYYY-MM-DD" formControlName="datefrom">
           <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
           <mat-datepicker #picker1></mat-datepicker>
         </mat-form-field>
@@ -17,7 +17,7 @@
         <mat-form-field class="col-md-6" appearance="outline" style="padding-left: 0px; padding-right: 30px;"
           [ngStyle]="{'font-size.px': 15}">
           <mat-label>종료일</mat-label>
-          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD" name="dateTo" formControlName="dateTo">
+          <input matInput [matDatepicker]="picker2" placeholder="YYYY-MM-DD" name="dateTo" formControlName="dateto">
           <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
           <mat-datepicker #picker2></mat-datepicker>
         </mat-form-field>
@@ -33,11 +33,11 @@
       </div>
       <div class="form-group col-md-4">
         <label for="inputDpt" class="col-form-label">소속명</label>
-        <input type="text" class="form-control" placeholder="소속명" formControlName="driverDept">
+        <input type="text" class="form-control" placeholder="소속명" formControlName="driverdept">
       </div>
       <div class="form-group col-md-4">
         <label for="inputName" class="col-form-label">성명</label>
-        <input type="text" class="form-control" placeholder="성명" formControlName="driverNm">
+        <input type="text" class="form-control" placeholder="성명" formControlName="drivernm">
       </div>
     </div>
 
@@ -45,13 +45,13 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="selectUseType" class="col-form-label">사용형태</label>
-        <select id="selectUseType" class="form-control" formControlName="useType">
+        <select id="selectUseType" class="form-control" formControlName="usetype">
           <option [value]="item.code" *ngFor="let item of useTypeList">{{item.name}}</option>
         </select>
       </div>
       <div class="form-group col-md-6">
         <label for="selectPurpose" class="col-form-label">사용유형</label>
-        <select id="selectPurpose" class="form-control" formControlName="usePurs">
+        <select id="selectPurpose" class="form-control" formControlName="usepurs">
           <option [value]="item.code" *ngFor="let item of usePursList">{{item.name}}</option>
         </select>
       </div>
@@ -59,7 +59,7 @@
 
     <div class="form-group width: 100%">
       <label for="useDetail">사용목적 기입</label>
-      <textarea class="form-control" id="useDetail" rows="3" formControlName="usePursDetail"></textarea>
+      <textarea class="form-control" id="useDetail" rows="3" formControlName="usepursdetail"></textarea>
     </div>
 
     <div class="form-row">
@@ -74,7 +74,7 @@
       <div class="form-group col-md-3">
         <label for="inputKM" class="col-form-label">주행거리</label>
         <span style="display: flex;"><input type="text" class="form-control" placeholder="주행거리"
-            formControlName="driveDist"><span style="margin-top: 5px;">KM</span></span>
+            formControlName="drivedist"><span style="margin-top: 5px;">KM</span></span>
       </div>
       <div class="form-group col-md-3">
         <label for="inputRefuel" class="col-form-label">주유내역</label>
@@ -82,86 +82,8 @@
             formControlName="fueling"><span style="margin-top: 5px;">L</span></span>
       </div>
     </div>
-
   </div>
 
-  <!--
-
-    
-      
-  </div>
--->
-
-  <!-- <div class="form-row">
-    <div class="form-group col-md-4">
-      <label for="selectCarNum" class="col-form-label">차량선택</label>
-      <select id="selectCarNum" class="form-control" [(ngModel)]="record.histCar" name="histCar">
-        <option *ngFor="let car of histCarList" [value]="car.key">
-          {{car.value}}
-        </option>
-      </select>
-    </div>
-    <div class="form-group col-md-4">
-      <label for="inputDpt" class="col-form-label">소속명</label>
-      <input type="text" class="form-control" placeholder="소속명" [(ngModel)]="record.driverDep" name="driverDep">
-    </div> -->
-  <!-- <div class="form-group col-md-4">
-      <label for="inputName" class="col-form-label">성명</label>
-      <input type="text" class="form-control" placeholder="성명" [(ngModel)]="record.driverNm" name="driverNm">
-    </div>
-  </div> -->
-
-  <!-- <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="selectUseType" class="col-form-label">사용형태</label>
-      <select id="selectUseType" class="form-control" [(ngModel)]="record.bizOrNot" name="bizOrNot">
-        <option [value]="item.key" *ngFor="let item of histCarList | keyvalue ">{{item.value}}</option>
-      </select>
-    </div>
-    <div class="form-group col-md-6">
-      <label for="selectPurpose" class="col-form-label">사용유형</label>
-      <select id="selectPurpose" class="form-control" [(ngModel)]="record.useType" name="useType">
-        <option [value]="item.key" *ngFor="let item of useTypeList | keyvalue ">{{item.value}}</option> -->
-
-  <!-- <option selected>제조, 판매시설 등 해당 법인의 사업장 방문</option>
-          <option>거래처, 대리점 방문</option>
-          <option>회의 참석</option>
-          <option>판촉 활동</option>
-          <option>출, 퇴근</option>
-          <option>교육, 훈련 등 기타 위에서 정하지 않은 업무 사용 목적</option>
-          <option>비업무용</option> -->
-
-  <!-- </select>
-    </div>
-  </div> -->
-
-  <!-- <div class="form-group width: 100%">
-    <label for="inputPurposeText">사용목적 기입</label>
-    <textarea class="form-control" id="inputPurposeText" rows="3" [(ngModel)]="record.usePurpose"
-      name="usePurpose"></textarea>
-  </div> -->
-  <!-- <div class="form-row">
-    <div class="form-group col-md-3">
-      <label for="inputDestination" class="col-form-label">목적지</label>
-      <input id="destination" type="text" class="form-control" placeholder="목적지" [(ngModel)]="record.destination"
-        name="destination">
-    </div>
-    <div class="form-group col-md-3">
-      <label for="inputStopover" class="col-form-label">경유지</label>
-      <input type="text" class="form-control" placeholder="경유지" [(ngModel)]="record.dropBy" name="dropBy">
-    </div>
-    <div class="form-group col-md-3">
-      <label for="inputKM" class="col-form-label">주행거리</label>
-      <span style="display: flex;"><input type="text" class="form-control" placeholder="주행거리"
-          [(ngModel)]="record.mileage" name="maileage"><span style="margin-top: 5px;">KM</span></span>
-    </div>
-    <div class="form-group col-md-3">
-      <label for="inputRefuel" class="col-form-label">주유내역</label>
-      <span style="display: flex;"><input type="text" class="form-control" placeholder="주유량"
-          [(ngModel)]="record.fueling" name="fueling"><span style="margin-top: 5px;">L</span></span>
-    </div>
-  </div>
-</div> -->
 
   <div class="row justify-content-center" style="margin-top: 20px;">
     <button (click)="add()" id="addInputData" class="btn btn-md btn-primary" type="submit"
