사용내역 입력 완료 후 '입력완료' alert 창 뜨고, main 화면으로 routing  //  닫기 버튼 기능 추가 (클릭 시 main 화면으로 routing 됨)

--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -138,7 +138,8 @@
     <div class="row justify-content-center" style="margin-top: 30px;">
       <button id="fix" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">수정</button>
       <button id="deleteRqt" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">삭제요청</button>
-      <button id="closePage" class="btn btn-md btn-primary" type="submit" style="margin: 5px;">닫기</button>
+      <button (click)="close()" id="closePage" class="btn btn-md btn-primary" type="submit"
+        style="margin: 5px;">닫기</button>
     </div>
   </div>
 
