--- a/car-mng-app/src/app/main/main.component.html
+++ b/car-mng-app/src/app/main/main.component.html
@@ -1,3 +1,45 @@
 <div role="main" class="col-sm-9 ml-sm-auto col-md-10 pt-3">
+
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" routerLink="/main">HIST 차량관리</a>
+        <ul class="navbar-nav navbar-right">
+          <li class="nav-item text-nowrap">
+            <a class="nav-link" routerLink="/login">로그아웃</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div class="container-fluid">
+    <div class="row">
+      <nav class="col-sm-3 col-md-2 d-none d-sm-block bg-light sidebar">
+        <ul class="nav nav-pills flex-column">
+
+          <li class="nav-item">
+            <a class="nav-link" [class.selected]="router.url ==='/history-input'" routerLink="/history-input">사용내역
+              입력</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" [class.selected]="router.url ==='/history-search'" routerLink="/history-search">사용내역
+              조회</a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" [class.selected]="router.url ==='/car-management'"
+              data-toggle="dropdown" routerLink="/car-management" role="button" aria-expanded="false">차량관리</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" routerLink="/car-management">차량정보 조회</a>
+              <a class="dropdown-item" routerLink="/car-management">차량 등록/삭제</a>
+            </div>
+          </li>
+
+        </ul>
+      </nav>
+    </div>
+  </div>
+
   <h1>Main</h1>
 </div>
