router 규칙 수정 완료 (3개 사이드 메뉴를 main component 하위 메뉴로 수정), login page 와 main(3개 하위 메뉴를 포함한) 를 같은 레벨로 설정 (login page 에 상단 메뉴바, side bar 가 표현되는 것을 해결하기 위해)\

--- a/car-mng-app/src/app/main/main.component.html
+++ b/car-mng-app/src/app/main/main.component.html
@@ -18,21 +18,22 @@
         <ul class="nav nav-pills flex-column">
 
           <li class="nav-item">
-            <a class="nav-link" [class.selected]="router.url ==='/history-input'" routerLink="/history-input">사용내역
+            <a class="nav-link" routerLink="history-input" [class.selected]="router.url === '/main/history-input'">사용내역
               입력</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" [class.selected]="router.url ==='/history-search'" routerLink="/history-search">사용내역
-              조회</a>
+            <a class="nav-link" routerLink="history-search"
+              [class.selected]="router.url === '/main/history-search'">사용내역 조회</a>
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" [class.selected]="router.url ==='/car-management'"
-              data-toggle="dropdown" routerLink="/car-management" role="button" aria-expanded="false">차량관리</a>
+            <a class="nav-link dropdown-toggle" routerLink="car-management"
+              [class.selected]="router.url === '/main/car-management'" data-toggle="dropdown" role="button"
+              aria-expanded="false">차량관리</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" routerLink="/car-management">차량정보 조회</a>
-              <a class="dropdown-item" routerLink="/car-management">차량 등록/삭제</a>
+              <a class="dropdown-item" routerLink="car-management">차량정보 조회</a>
+              <a class="dropdown-item" routerLink="car-management">차량 등록/삭제</a>
             </div>
           </li>
 
@@ -41,5 +42,6 @@
     </div>
   </div>
 
-  <h1>Main</h1>
-</div>
+  <div class="main-wrapper">
+    <router-outlet></router-outlet>
+  </div>
