--- a/car-mng-app/src/app/app.component.html
+++ b/car-mng-app/src/app/app.component.html
@@ -1,13 +1,3 @@
-<!-- TODO: loading component 구현 및 적용 필요 -->
-<!-- <app-loading></app-loading> -->
-
-<!-- TODO: isLogin, isLogout 구현 및 적용 필요 -->
-
-<!-- <ng-container *ngIf="isLogin"> -->
-<ng-container>
+<div class="app-wrapper">
   <router-outlet></router-outlet>
-</ng-container>
-
-<!-- <div *ngIf="!isLogin">
-  <app-login></app-login>
-</div> -->
+</div>
