login 기능을 refer site 내용에 따라 복잡하게 구현할지, form group 으로 간단히 구현할지 판단 중의 상황  //  일단 최대한 refer site 방식으로 구현할 계획

--- a/car-mng-app/src/app/history-input/history-input.component.html
+++ b/car-mng-app/src/app/history-input/history-input.component.html
@@ -1,3 +1,4 @@
+<div class="pt-5" style="margin-top: 10px;">
   <h1>Fill in</h1>
 
   <div #inputForm [formGroup]="historyInputForm">
@@ -89,6 +90,6 @@
       style="margin: 5px;">입력완료</button>
     <button (click)="close()" id="closePage" class="btn btn-md btn-primary" type="submit"
       style="margin: 5px;">닫기</button>
-    <button (click)="login()" id="closePage" class="btn btn-md btn-primary" type="button"
-      style="margin: 5px;">login</button>
   </div>
+
+</div>
