--- a/car-mng-app/src/app/history-search/history-search.component.html
+++ b/car-mng-app/src/app/history-search/history-search.component.html
@@ -1,3 +1,5 @@
+<div class="pt-5" style="margin-top: 10px;">
+  
   <div class="d-flex bd-highlight">
     <div class="flex-grow-1 bd-highlight" style="padding-left: 0px;">
       <h1>Search</h1>
@@ -141,3 +143,5 @@
         style="margin: 5px;">닫기</button>
     </div>
   </div>
+
+</div>
