--- a/car-mng-app/src/app/login/login.component.css
+++ b/car-mng-app/src/app/login/login.component.css
@@ -1,3 +1,14 @@
+#login {
+  height: 100%;
+  display: grid;
+  display: -ms-flexbox;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #f5f5f5;
+}
+
 .wrapper {
   display: flex;
   align-items: center;
