1. 잘못된 주소 입력 시 login page로 redirection 되는 router 옵션 변경 (app module router.ts 에서 main module router.ts 로 이동)
2. login page 에서 id, password 입력 후 login 버튼 클릭 말고, enter 쳤을 때 login 액션 되도록 onEnter() 기능 구현

3. page 별 닫기 버튼 클릭 시 -> main page로 리다이렉션

4. 상단 메뉴바 로그아웃 클릭 시에만 login page 로 리다이렉션 (localStorage 의 accessToken 값 remove 하면서)

5. 조건 넣어서 조건에 맞는 검색내용만 List 로 그리도록 구현 중

6. list 컬럼 중 사용자 말고 등록자를 추가해야 되는가?

--- a/car-mng-app/src/app/login/login.component.css
+++ b/car-mng-app/src/app/login/login.component.css
@@ -10,7 +10,7 @@
 }
 
 .wrapper {
-  display: flex;
+  /* display: flex; */
   align-items: center;
   flex-direction: column;
   justify-content: center;
