--- a/car-mng-app/src/app/main/main.component.html
+++ b/car-mng-app/src/app/main/main.component.html
@@ -6,7 +6,7 @@
         <a class="navbar-brand" routerLink="/main">HIST 차량관리</a>
         <ul class="navbar-nav navbar-right">
           <li class="nav-item text-nowrap">
-            <a class="nav-link" routerLink="/login">로그아웃</a>
+            <a class="nav-link" (click)="logout()">로그아웃</a>
           </li>
         </ul>
       </div>
